60-eks/app/05-gateway/frontend.yaml
apiVersion: gateway.networking.kubernetes.io/v1
kind: HTTPRoute
metadata:
  name: roboshop-http-route
  namespace: roboshop
spec:
  parentRefs:
    - name: roboshop-gateway
      sectionName: https
  hostnames: "roboshop-dev.happielearning.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
